[gd_scene load_steps=11 format=3 uid="uid://k6phmbhftrdq"]

[ext_resource type="Script" uid="uid://b8ccbgeqcb213" path="res://Entites/Projectiles/bullet.gd" id="1_jnb4d"]
[ext_resource type="Script" uid="uid://d2pkkuplbw4jd" path="res://Components/HitBox/HitBox.gd" id="2_rjcpp"]
[ext_resource type="Texture2D" uid="uid://c474ennl4evqj" path="res://Entites/Projectiles/Main ship weapon - Projectile - Auto cannon bullet.png" id="3_2cv5c"]
[ext_resource type="Script" uid="uid://c72kw4hrdibfj" path="res://Components/FreeTimer/freeTimer.gd" id="4_2cv5c"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fkc3b"]
atlas = ExtResource("3_2cv5c")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxmap"]
atlas = ExtResource("3_2cv5c")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3h1pr"]
atlas = ExtResource("3_2cv5c")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qg3jc"]
atlas = ExtResource("3_2cv5c")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_sy24k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkc3b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxmap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3h1pr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qg3jc")
}],
"loop": true,
"name": &"Shoot",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3pu08"]
size = Vector2(14, 10)

[node name="Bullet" type="Node2D"]
top_level = true
texture_filter = 1
script = ExtResource("1_jnb4d")

[node name="Animation" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
rotation = 1.5707964
sprite_frames = SubResource("SpriteFrames_sy24k")
animation = &"Shoot"
autoplay = "Shoot"

[node name="HitBox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 2
collision_mask = 4
script = ExtResource("2_rjcpp")
damage = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_3pu08")

[node name="FreeTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true
script = ExtResource("4_2cv5c")

[connection signal="hitTarget" from="HitBox" to="." method="_on_hit_box_hit_target"]
